crates/wdl-grammar/tests/parsing/mismatched-brace/source.errors
error: expected `{`, but found end of input
  ┌─ tests/parsing/mismatched-brace/source.wdl:5:11
  │
5 │ task test {
  │           ^ unclosed delimiter
6 │     meta {
  │          - this opening brace...
7 │     }
  │     - ...matches this closing brace

